Update form serReqForm_approval.

--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -33,12 +33,12 @@
                         "properties": {
                             "formDefId": "uploadDocumentByCustomer",
                             "id": "field5",
-                            "label": "",
+                            "label": "Upload Document",
                             "loadBinder": {
                                 "className": "org.joget.apps.form.lib.WorkflowFormBinder",
                                 "properties": {}
                             },
-                            "noframe": "true",
+                            "noframe": "",
                             "parentSubFormId": "",
                             "readonly": "",
                             "readonlyLabel": "",
