Update form serReqForm_approval.

--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -113,8 +113,8 @@
                     "className": "",
                     "properties": {}
                 },
-                "visibilityControl": "",
-                "visibilityValue": ""
+                "visibilityControl": "approval_status",
+                "visibilityValue": "In-Progress"
             }
         },
         {
