--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -30,8 +30,29 @@
                 "properties": {"width": "100%"}
             }],
             "properties": {
+                "comment": "",
                 "id": "section6",
-                "label": "Section"
+                "join": "",
+                "label": "",
+                "loadBinder": {
+                    "className": "",
+                    "properties": {}
+                },
+                "permission": {
+                    "className": "",
+                    "properties": {}
+                },
+                "permissionReadonly": "",
+                "readonly": "",
+                "readonlyLabel": "",
+                "regex": "",
+                "reverse": "",
+                "storeBinder": {
+                    "className": "",
+                    "properties": {}
+                },
+                "visibilityControl": "",
+                "visibilityValue": ""
             }
         },
         {
@@ -79,7 +100,7 @@
                 },
                 "permissionHidden": "",
                 "permissionReadonly": "",
-                "readonly": "true",
+                "readonly": "",
                 "readonlyLabel": "",
                 "regex": "",
                 "reverse": "",
