--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -117,24 +117,29 @@
             "elements": [{
                 "className": "org.joget.apps.form.model.Column",
                 "elements": [{
-                    "className": "org.joget.apps.form.lib.SubForm",
+                    "className": "org.joget.apps.form.lib.FileUpload",
                     "properties": {
-                        "formDefId": "uploadDocumentByCustomer",
-                        "id": "field5",
-                        "label": "",
-                        "loadBinder": {
-                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
-                            "properties": {}
-                        },
-                        "noframe": "true",
-                        "parentSubFormId": "",
+                        "attachment": "true",
+                        "fileType": "",
+                        "fileTypeMsg": "Invalid file type",
+                        "id": "docuploadbyclient",
+                        "label": "Document / Drawing Uploaded by Client",
+                        "maxSize": "",
+                        "maxSizeMsg": "File size limit exceeded",
+                        "multiple": "true",
+                        "padding": "",
+                        "permissionType": "",
                         "readonly": "",
-                        "readonlyLabel": "",
-                        "storeBinder": {
-                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+                        "removeFile": "",
+                        "resizeHeight": "",
+                        "resizeMethod": "",
+                        "resizeQuality": "0.8",
+                        "resizeWidth": "",
+                        "size": "",
+                        "validator": {
+                            "className": "",
                             "properties": {}
-                        },
-                        "subFormParentId": ""
+                        }
                     }
                 }],
                 "properties": {"width": "100%"}
