--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -116,41 +116,30 @@
             "className": "org.joget.apps.form.model.Section",
             "elements": [{
                 "className": "org.joget.apps.form.model.Column",
-                "elements": [
-                    {
-                        "className": "org.joget.plugin.enterprise.AjaxSubForm",
-                        "properties": {
-                            "ajax": "",
-                            "collapsible": "",
-                            "collapsibleExpanded": "true",
-                            "collapsibleLabelCollapsed": "View Details",
-                            "collapsibleLabelExpanded": "Hide Details",
-                            "formDefId": "uploadDocumentByCustomer",
-                            "hideEmpty": "",
-                            "id": "field7",
-                            "label": "",
-                            "noLoad": "",
-                            "noframe": "",
-                            "parentSubFormId": "",
-                            "readonly": "",
-                            "readonlyLabel": "",
-                            "storeBinder": {
-                                "className": "org.joget.apps.form.lib.WorkflowFormBinder",
-                                "properties": {}
-                            },
-                            "subFormParentId": ""
-                        }
-                    },
-                    {
-                        "className": "org.joget.apps.form.lib.CustomHTML",
-                        "properties": {
-                            "autoPopulate": "",
-                            "id": "field7",
-                            "label": "",
-                            "value": "<h3>*Please remove the old file and upload new file<\/h3>"
-                        }
+                "elements": [{
+                    "className": "org.joget.plugin.enterprise.AjaxSubForm",
+                    "properties": {
+                        "ajax": "",
+                        "collapsible": "",
+                        "collapsibleExpanded": "true",
+                        "collapsibleLabelCollapsed": "View Details",
+                        "collapsibleLabelExpanded": "Hide Details",
+                        "formDefId": "uploadDocumentByCustomer",
+                        "hideEmpty": "",
+                        "id": "field7",
+                        "label": "",
+                        "noLoad": "",
+                        "noframe": "",
+                        "parentSubFormId": "",
+                        "readonly": "",
+                        "readonlyLabel": "",
+                        "storeBinder": {
+                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+                            "properties": {}
+                        },
+                        "subFormParentId": ""
                     }
-                ],
+                }],
                 "properties": {"width": "100%"}
             }],
             "properties": {
