--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -117,6 +117,50 @@
             "elements": [{
                 "className": "org.joget.apps.form.model.Column",
                 "elements": [{
+                    "className": "org.joget.apps.form.lib.FileUpload",
+                    "properties": {
+                        "attachment": "",
+                        "fileType": "",
+                        "fileTypeMsg": "Invalid file type",
+                        "id": "docuploadbyclient",
+                        "label": "Upload Drawing / Document",
+                        "maxSize": "",
+                        "maxSizeMsg": "File size limit exceeded",
+                        "multiple": "true",
+                        "padding": "",
+                        "permissionPlugin": {
+                            "className": "org.joget.apps.userview.lib.GroupPermission",
+                            "properties": {
+                                "allowedGroupIds": "G-009",
+                                "orgId": ""
+                            }
+                        },
+                        "permissionType": "custom",
+                        "readonly": "",
+                        "removeFile": "",
+                        "resizeHeight": "",
+                        "resizeMethod": "",
+                        "resizeQuality": "0.8",
+                        "resizeWidth": "",
+                        "size": "",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        }
+                    }
+                }],
+                "properties": {"width": "100%"}
+            }],
+            "properties": {
+                "id": "section6",
+                "label": "Section"
+            }
+        },
+        {
+            "className": "org.joget.apps.form.model.Section",
+            "elements": [{
+                "className": "org.joget.apps.form.model.Column",
+                "elements": [{
                     "className": "org.joget.plugin.enterprise.AjaxSubForm",
                     "properties": {
                         "ajax": "",
