--- a/lists/ofc_app_serv_req_audit_trial.json
+++ b/lists/ofc_app_serv_req_audit_trial.json
@@ -13,6 +13,14 @@
     "checkboxPosition": "left",
     "columns": [
         {
+            "filterable": true,
+            "hidden": "false",
+            "id": "column_2",
+            "label": "columns",
+            "name": "columns",
+            "sortable": "false"
+        },
+        {
             "action": {
                 "className": "",
                 "properties": {}
