--- a/lists/ofc_app_serv_req_audit_trial.json
+++ b/lists/ofc_app_serv_req_audit_trial.json
@@ -99,7 +99,7 @@
                 "className": "org.joget.plugin.enterprise.DateFormatter",
                 "properties": {
                     "dateStoreInUTC": "true",
-                    "displayFormat": "dd-MMM-yyyy hh:mm"
+                    "displayFormat": "dd-MM-yyyy"
                 }
             },
             "headerAlignment": "",
