Update list ofc_app_serv_req_audit_trial.

--- a/lists/ofc_app_serv_req_audit_trial.json
+++ b/lists/ofc_app_serv_req_audit_trial.json
@@ -98,7 +98,8 @@
             "format": {
                 "className": "org.joget.plugin.enterprise.DateFormatter",
                 "properties": {
-                    "dateStoreInUTC": "true",
+                    "dataFormat": "dd-MM-yyyy",
+                    "dateStoreInUTC": "",
                     "displayFormat": "dd-MM-yyyy"
                 }
             },
