--- a/lists/ofc_app_serv_req_audit_trial.json
+++ b/lists/ofc_app_serv_req_audit_trial.json
@@ -96,12 +96,8 @@
             "exclude_export": "",
             "filterable": true,
             "format": {
-                "className": "org.joget.plugin.enterprise.DateFormatter",
-                "properties": {
-                    "dataFormat": "dd-MM-yyyy",
-                    "dateStoreInUTC": "",
-                    "displayFormat": "dd-MM-yyyy"
-                }
+                "className": "",
+                "properties": {}
             },
             "headerAlignment": "",
             "hidden": "false",
