--- a/lists/ofc_app_serv_req_audit_trial.json
+++ b/lists/ofc_app_serv_req_audit_trial.json
@@ -13,12 +13,26 @@
     "checkboxPosition": "left",
     "columns": [
         {
+            "action": {
+                "className": "",
+                "properties": {}
+            },
+            "alignment": "",
+            "datalist_type": "column",
+            "exclude_export": "",
             "filterable": true,
+            "format": {
+                "className": "",
+                "properties": {}
+            },
+            "headerAlignment": "",
             "hidden": "false",
             "id": "column_2",
-            "label": "COLUMNS",
+            "label": "Event Name",
             "name": "COLUMNS",
-            "sortable": "false"
+            "sortable": "false",
+            "style": "",
+            "width": ""
         },
         {
             "action": {
